--- a/PhD_Submit_Title.tex
+++ b/PhD_Submit_Title.tex
@@ -36,7 +36,9 @@
 {\Large born on 11.08.1989} \\
 {\Large \thesistown}\\ \vspace{2cm}
 {\large accepted on the recommendation of} \\ \vspace{0.5cm}
-{\Large \textbf{Prof. Dr. G\"{u}nther Dissertori}} \\ \vspace{2cm}
+{\Large \textbf{Prof. Dr. G\"{u}nther Dissertori}} \\
+{\Large \textbf{Prof. Dr. Rainer Wallny}} \\
+{\Large \textbf{Dr. Dominik Dannheim}} \\ \vspace{1cm}
 
 %% \begin{minipage}{0.4\textwidth}
 %% \begin{flushleft} \large
