--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -920,13 +920,13 @@ two configurations, the weighting potential and field are obtained.
   \caption{The weighting field and potential.}\label{fig:RamoTCAD}
 \end{figure}
 
-The weighting potential for different positions on the x-axis is shown
-in \cref{fig:RamoTCADCuts}. Since, the total charge collected by the
-electrode $k$ depends only on the positions $z_0$ and $z_p$, in the
-absence of the radiation-induced damages (which would affect the
-distributions of the electric and weighting fields), the Ramo theorem
-can be neglected. Only the electrostatic field and potential are
-important.
+The weighting potential for different hit positions on the x-axis is
+shown in \cref{fig:RamoTCADCuts}. Since, the total charge collected by
+the electrode $k$ depends only on the depth positions $z_0$ and $z_p$,
+in the absence of the radiation-induced damages (which would affect
+the distributions of the electric and weighting fields), the Ramo
+theorem can be neglected. The charge carriers drift following the
+electric field distribution and the diffusion causes multi-pixel hits.
 
 \begin{figure}[htbp]
   \centering
