--- a/include/Telescope.tex
+++ b/include/Telescope.tex
@@ -449,8 +449,9 @@ and $\phi$ angles.
 \cref{tab:SummaryOfResolutions} summarises the telescope performance
 obtained in the simulations. The simulations confirm that the Timepix3
 telescope allows for a high resolution track reconstruction on the DUT
-($\sim2\,\micron$). This telescope is adapted for testing the DUTs
-with high resolution constraints as expected for CLIC.
+($\sim2\,\micron$) as expected by~\cite{Akiba:2013yxa}. This telescope
+is adapted for testing the DUTs with high resolution constraints as
+expected for CLIC.
 
 In \cref{ch:ThinSensorsStudies} the Timepix3 telescope is used to
 precisely measure the resolution of thin sensors.
