[Silicon] intermediate commit

--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -617,7 +617,8 @@ resolution) is still significantly worse than the required
 $3\,\micron$. It can be concluded that the required resolution can be
 either obtained with smaller pixels using planar sensors or new
 solution of charge sharing are needed in order to reduce even more the
-number of single-hit clusters.
+number of single-hit clusters. By tilting the detectors, the charge
+sharing could be as well optimised.
 
 \begin{figure}[htbp]\centering
   \begin{subfigure}[b]{0.45\textwidth}
@@ -636,12 +637,12 @@ number of single-hit clusters.
 \end{figure}
 
 
-\begin{figure}[htbp] 
-  \centering
-  \includegraphics[width=0.5\textwidth]{./figures/TestBeam/chargeSharing_theory.pdf}
-  \caption{Thresholds at 500 at 1000 electrons are shown in green lines.}
-  \label{fig:chargeSharing_theory}
-\end{figure}
+%% \begin{figure}[htbp] 
+%%   \centering
+%%   \includegraphics[width=0.5\textwidth]{./figures/TestBeam/chargeSharing_theory.pdf}
+%%   \caption{Thresholds at 500 at 1000 electrons are shown in green lines.}
+%%   \label{fig:chargeSharing_theory}
+%% \end{figure}
 
 %% %% --------------------------------------------- %%
 %% \begin{figure}[htbp] \centering
